syntax = "proto3";

package example;

// The UnaryStream service definition.
service UnaryStreamService {
  rpc UnaryStream (Request) returns (stream Response) {}
}

// The request message containing a name.
message Request {
  string name = 1;
}

// The response message containing a greeting
message Response {
  string message = 1;
}
